--- a/package.json
+++ b/package.json
@@ -1,1 +1,18 @@
-
+```json
+{
+  "name": "slither-io-clone",
+  "version": "1.0.0",
+  "description": "Multiplayer snake game with socket.io",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.6.1"
+  }
+}
+```
