--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "slither-io",
-  "version": "1.0.0",
-  "description": "Multiplayer snake game with socket.io",
+  "name": "slither-io-clone",
+  "version": "2.0.0",
+  "description": "Multiplayer snake game with boost feature",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -12,5 +13,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.6.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
